[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/knight.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Camera.gd" type="Script" id=3]
[ext_resource path="res://script/Main.gd" type="Script" id=4]
[ext_resource path="res://scene/colosseum.tscn" type="PackedScene" id=5]
[ext_resource path="res://音素材/Ride_the_Dragon.ogg" type="AudioStream" id=6]
[ext_resource path="res://texture_prgress/texture_prgress/bar_under.png" type="Texture" id=7]
[ext_resource path="res://texture_prgress/texture_prgress/bar_progress.png" type="Texture" id=8]
[ext_resource path="res://Mplus2-Medium.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[node name="Main" type="Spatial"]
pause_mode = 2
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, 8.55252e-08, -1.02302e-07, -1.72992e-08, 0.677518, 0.735506, 1.32216e-07, 0.735506, -0.677518, 0, 6.52014, 0 )

[node name="colosseum" parent="." instance=ExtResource( 5 )]
transform = Transform( -2.62268e-07, 0, 6, 0, 6, 0, -6, 0, -2.62268e-07, 0.00447083, 3.88559, -0.0075779 )

[node name="mob" parent="." instance=ExtResource( 2 )]
pause_mode = 1
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.03167e-07, 0, 4.94169 )
back = 20

[node name="knight" parent="." instance=ExtResource( 1 )]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.6732 )
speed = 3
back = 20

[node name="Camera" type="Camera" parent="knight"]
transform = Transform( -1, -7.5498e-08, 1.30766e-07, 0, 0.866025, 0.5, -1.50996e-07, 0.5, -0.866025, 0, 2.66816, -3.05313 )
script = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="knight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.879166, 0 )
enabled = true
cast_to = Vector3( 0, 1.73, -3 )
collision_mask = 16

[node name="BGM" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 6 )
autoplay = true
bus = "bgm"

[node name="knightHP" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -77.51
margin_right = 512.0
margin_bottom = -45.5098
rect_scale = Vector2( 3.401, 2.3 )
max_value = 400.0
value = 400.0
rounded = true
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mobHP" type="TextureProgress" parent="."]
margin_left = 178.0
margin_right = 512.0
margin_bottom = 32.0
rect_scale = Vector2( 3.401, 2.3 )
max_value = 500.0
value = 500.0
rounded = true
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -263.0
margin_top = -140.0
margin_right = 85.0
margin_bottom = -52.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "L　O　S　E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -140.0
margin_right = 29.0
margin_bottom = -52.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.721569, 0.360784, 1 )
text = "W　I　N"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -380.0
margin_bottom = -291.998
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "WASDキー　移動
左クリック　攻撃
右クリック　ガード
Escキー　　 マウスカーソル表示
Rキー　　　 リトライ"
__meta__ = {
"_edit_use_anchors_": false
}
